--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "^4.17.1",
+    "express-routemagic": "^2.0.6",
     "helmet": "^4.6.0",
     "http-errors": "~1.6.2",
     "morgan": "^1.10.0"
